--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Example IIUC</string>
+    <string name="textview4">Value 1</string>
+    <string name="textview5">Value 2</string>
+    <string name="button">Example IIUC</string>
+
 </resources>
